# switch2-gamecube-bt

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks-history.yml  sbom.yml  scorecard.yml
docs/: DEVELOPMENT-SPEC.md  IMPLEMENTATION-PLAN.md  LINUX-AGENT-HANDOFF.md  PROJECT-MEMORY.md  SUPPORT-MATRIX.md  WINDOWS-LAB.md  WSL2-LAB.md  pre-commit-hooks.md
docs/decisions/: 0001-usb-initialization-safety-gate.md  0002-usb-initialization-model.md  0003-minimal-usb-input-probe.md  0004-windows-ble-capability-host.md  0005-first-working-ble-transport.md
docs/observations/: 2026-07-11-sdl3-windows-runtime-baseline.md  2026-07-11-windows-usb-bulk-inventory.md  2026-07-11-windows-usb-decoded-input.md  2026-07-11-windows-usb-described-probe.md  2026-07-11-windows-usb-inventory.md  2026-07-11-windows-usb-motion.md  2026-07-11-windows-usb-passive-observation.md  2026-07-11-windows-usb-report5-probe.md  2026-07-11-windows-usb-sdl-sequence.md  2026-07-11-windows-usb-start-stream-probe.md  2026-07-12-windows-bluetooth-discovery.md  2026-07-12-windows-packaged-ble-baseline.md  2026-07-12-windows-usb-calibration.md
src/: lib.rs
src/application/: mod.rs
src/backend/: fake.rs  mod.rs
src/cli/: mod.rs
src/controllers/: mod.rs
src/controllers/bee021/: calibration.rs  mod.rs  usb_protocol.rs  wired.rs
src/domain/: capability.rs  error.rs  event.rs  identity.rs  mod.rs  operation.rs  state.rs
src/platform/: mod.rs
src/protocol/: input.rs  mod.rs  output.rs  registry.rs  report.rs
windows/package/: AppxManifest.xml  Invoke-PackagedS2bt.ps1
(+7 files in other folders)
