[package]
name = "switch2-gamecube-bt"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Anders Voss"]
license = "AGPL-3.0-only"
description = "Hardened Rust workspace for Switch 2 GameCube Bluetooth experiments."
repository = "https://github.com/anderstvoss/switch2-gamecube-bt"
readme = "README.md"
keywords = ["bluetooth", "gamecube", "switch", "controller"]
categories = ["hardware-support"]
publish = false

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[target.'cfg(windows)'.dependencies]
hidapi = { version = "2.6.6", default-features = false, features = ["windows-native"] }
nusb = "0.2.4"
sha2 = "0.10.9"
windows = { version = "0.61.3", features = ["Devices_Bluetooth", "Devices_Enumeration", "Foundation"] }

[lib]
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
